<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateMeetingActivity"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/post_bar"
        layout="@layout/app_bar_layout"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/post_bar"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:id="@+id/post2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/rate_logo"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/logo_large"
                    android:background="@null"
                    />
                <TextView
                    android:id="@+id/rate_us"
                    android:text="@string/career_adviser"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/border"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        >
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/edit_patient_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:layout_marginEnd="5dp"
                            app:met_floatingLabel="highlight"
                            android:inputType="textCapWords"
                            android:hint="@string/write_patientName"
                            />
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/edit_disease_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            app:met_floatingLabel="highlight"
                            android:layout_marginStart="5dp"
                            android:inputType="textCapWords"
                            android:hint="@string/write_patientDisease"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        >
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/edit_patient_age"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            app:met_floatingLabel="highlight"
                            android:layout_marginEnd="5dp"
                            android:inputType="textCapWords"
                            android:hint="@string/write_patientAge"
                            />
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/edit_patient_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            app:met_floatingLabel="highlight"
                            android:layout_marginStart="5dp"
                            android:inputType="date"
                            android:hint="@string/write_patientDate"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        >
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/edit_patient_mobile"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:layout_marginEnd="5dp"
                            app:met_floatingLabel="highlight"
                            android:inputType="number"
                            android:hint="@string/write_patientMobile"
                            />
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/edit_patient_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            app:met_floatingLabel="highlight"
                            android:layout_marginStart="5dp"
                            android:inputType="time"
                            android:hint="@string/write_patientTime"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        >
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/edit_hospital_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            app:met_floatingLabel="highlight"
                            android:inputType="textCapWords"
                            android:hint="@string/write_hospitalAddress"
                            />
                    </LinearLayout>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edit_description"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="top"
                        app:met_floatingLabel="highlight"
                        android:inputType="textCapWords"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:hint="@string/write_post_quote"
                        />
                    <Button
                        android:id="@+id/Post_button"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/post_now"
                        android:background="@drawable/btn_background"
                        android:padding="10dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="right"
                        android:layout_marginEnd="50dp"
                        />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>